Docker fixes.